Converted vavr iterator to java stream