@@ -13,7 +13,7 @@ import java.util.ArrayList;
 import java.util.function.UnaryOperator;
 import java.util.stream.Collectors;
 
-import static common.DataSet.EGG_VALIDATION_CHAIN;
+import static common.ValidationConfig.EGG_VALIDATION_CHAIN;
 import static common.DataSet.getExpectedImmutableEggValidationResults;
 import static domain.validation.ValidationFailureConstants.VALIDATION_FAILURE_1;
 import static domain.validation.ValidationFailureConstants.VALIDATION_FAILURE_2;
@@ -48,7 +48,7 @@ public class RailwayEggValidation2 {
         for (Validation<ValidationFailure, ImmutableEgg> validationResult : validationResults) {
             System.out.println(validationResult);
         }
-        Assertions.assertEquals(getExpectedImmutableEggValidationResults().toJavaList(), validationResults);
+        Assertions.assertEquals(getExpectedImmutableEggValidationResults(), validationResults);
     }
     
     /**
@@ -59,11 +59,11 @@ public class RailwayEggValidation2 {
      */
     @Test
     void declarativeOrchestration() {
-        final var validationResults = DataSet.getImmutableEggCarton().iterator()
+        final var validationResults = DataSet.getImmutableEggCarton().stream()
                 .map(Validation::<ValidationFailure, ImmutableEgg>valid)
-                .map(eggToBeValidated -> EGG_VALIDATION_CHAIN
-                        .foldLeft(eggToBeValidated, (validatedEgg, currentValidation) -> currentValidation.apply(validatedEgg)))
-                .toList();
+                .map(eggToBeValidated -> EGG_VALIDATION_CHAIN // this is a vavr list
+    /*foldLeft from vavr list*/.foldLeft(eggToBeValidated, (validatedEgg, currentValidation) -> currentValidation.apply(validatedEgg)))
+                .collect(Collectors.toList());
         validationResults.forEach(System.out::println);
         Assertions.assertEquals(getExpectedImmutableEggValidationResults(), validationResults);
     }
@@ -72,53 +72,53 @@ public class RailwayEggValidation2 {
     void declarativeOrchestrationParallel() {
         final var validationResults = Utils.getImmutableEggStream(DataSet.getImmutableEggCarton())
                 .map(Validation::<ValidationFailure, ImmutableEgg>valid)
-                .map(eggToBeValidated -> EGG_VALIDATION_CHAIN
-                        .foldLeft(eggToBeValidated, (validatedEgg, currentValidation) -> currentValidation.apply(validatedEgg)))
+                .map(eggToBeValidated -> EGG_VALIDATION_CHAIN // this is a vavr list
+    /*foldLeft from vavr list*/.foldLeft(eggToBeValidated, (validatedEgg, currentValidation) -> currentValidation.apply(validatedEgg)))
                 .collect(Collectors.toList());
         validationResults.forEach(System.out::println);
-        Assertions.assertEquals(getExpectedImmutableEggValidationResults().toJavaList(), validationResults);
+        Assertions.assertEquals(getExpectedImmutableEggValidationResults(), validationResults);
     }
 
-    public static UnaryOperator<Validation<ValidationFailure, ImmutableEgg>> validate1 = validatedEgg -> validatedEgg
+    public static final UnaryOperator<Validation<ValidationFailure, ImmutableEgg>> validate1 = validatedEgg -> validatedEgg
             .filter(Operations::simpleOperation1)
             .getOrElse(() -> Validation.invalid(VALIDATION_FAILURE_1));
 
-    public static UnaryOperator<Validation<ValidationFailure, ImmutableEgg>> validate2 = validatedEgg -> validatedEgg
+    public static final UnaryOperator<Validation<ValidationFailure, ImmutableEgg>> validate2 = validatedEgg -> validatedEgg
             .map(Operations::throwableOperation2)
-            .flatMap(tryResult -> tryResult.toValidation(cause -> ValidationFailure.withErrorMessage(cause.getMessage())))
+            .flatMap(tryResult -> tryResult.toValidation(cause -> ValidationFailure.withErrorMessage(cause.getMessage()))) // Trick in the Monad
             .filter(Boolean::booleanValue)
             .getOrElse(() -> Validation.invalid(VALIDATION_FAILURE_2))
             .flatMap(ignore -> validatedEgg);
 
-    public static UnaryOperator<Validation<ValidationFailure, ImmutableEgg>> validateParent3 = validatedEgg -> validatedEgg
+    public static final UnaryOperator<Validation<ValidationFailure, ImmutableEgg>> validateParent3 = validatedEgg -> validatedEgg
             .map(Operations::throwableOperation3)
             .flatMap(tryResult -> tryResult.toValidation(cause -> ValidationFailure.withErrorMessage(cause.getMessage())))
             .filter(Boolean::booleanValue)
             .getOrElse(() -> Validation.invalid(VALIDATION_FAILURE_PARENT_3))
             .flatMap(ignore -> validatedEgg);
     
-    public static UnaryOperator<Validation<ValidationFailure, Yolk>> validateChild31 = validatedYolk -> validatedYolk
+    public static final UnaryOperator<Validation<ValidationFailure, Yolk>> validateChild31 = validatedYolk -> validatedYolk
             .map(Operations::throwableNestedOperation3)
             .flatMap(tryResult -> tryResult.toValidation(cause -> ValidationFailure.withErrorMessage(cause.getMessage())))
             .filter(Boolean::booleanValue)
             .getOrElse(() -> Validation.invalid(VALIDATION_FAILURE_CHILD_3))
             .flatMap(ignore -> validatedYolk);
 
-    public static UnaryOperator<Validation<ValidationFailure, Yolk>> validateChild32 = validatedYolk -> validatedYolk
+    public static final UnaryOperator<Validation<ValidationFailure, Yolk>> validateChild32 = validatedYolk -> validatedYolk
             .map(Operations::throwableNestedOperation3)
             .flatMap(tryResult -> tryResult.toValidation(cause -> ValidationFailure.withErrorMessage(cause.getMessage())))
             .filter(Boolean::booleanValue)
             .getOrElse(() -> Validation.invalid(VALIDATION_FAILURE_CHILD_3))
             .flatMap(ignore -> validatedYolk);
 
-    public static UnaryOperator<Validation<ValidationFailure, ImmutableEgg>> validateParent41 = validatedEgg -> validatedEgg
+    public static final UnaryOperator<Validation<ValidationFailure, ImmutableEgg>> validateParent41 = validatedEgg -> validatedEgg
             .map(Operations::throwableOperation3)
             .flatMap(tryResult -> tryResult.toValidation(cause -> ValidationFailure.withErrorMessage(cause.getMessage())))
             .filter(Boolean::booleanValue)
             .getOrElse(() -> Validation.invalid(VALIDATION_FAILURE_PARENT_3))
             .flatMap(ignore -> validatedEgg);
 
-    public static UnaryOperator<Validation<ValidationFailure, ImmutableEgg>> validateParent42 = validatedEgg -> validatedEgg
+    public static final UnaryOperator<Validation<ValidationFailure, ImmutableEgg>> validateParent42 = validatedEgg -> validatedEgg
             .map(Operations::throwableOperation3)
             .flatMap(tryResult -> tryResult.toValidation(cause -> ValidationFailure.withErrorMessage(cause.getMessage())))
             .filter(Boolean::booleanValue)
@@ -126,7 +126,7 @@ public class RailwayEggValidation2 {
             .flatMap(ignore -> validatedEgg);
 
     // Child with multiple Parent Validations
-    public static UnaryOperator<Validation<ValidationFailure, Yolk>> validateChild4 = validatedYolk -> validatedYolk
+    public static final UnaryOperator<Validation<ValidationFailure, Yolk>> validateChild4 = validatedYolk -> validatedYolk
                     .map(Operations::throwableNestedOperation3)
                     .flatMap(tryResult -> tryResult.toValidation(cause -> ValidationFailure.withErrorMessage(cause.getMessage())))
                     .filter(Boolean::booleanValue)
